/* Copyright 2019 Istio Authors. All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package stackdriver.config.v1alpha1;

message PluginConfig {
  // Optional. Controls whether to export server access log.
  bool disable_server_access_logging = 1;

  // Optional. FQDN of destination service that the request routed to, e.g.
  // productpage.default.svc.cluster.local. If not provided, request host header
  // will be used instead
  string destination_service_name = 2;

  // Optional. The endpoint that plugin targets for metric reporting. If not
  // specified, the default Stackdriver monitoring endpoint will be used.
  string test_monitoring_endpoint = 3;

  // Optional. The endpoint that plugin targets for access log reporting. If not
  // specified, the default Stackdriver monitoring endpoint will be used.
  string test_logging_endpoint = 4;
}
